--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                 <div class="col-lg-8 col-lg-offset-2">
                     <h2>Efetue seu Cadastro!!</h2>
                     <p>Desafie-se entre nessa nova rede colaborativa, onde você terá um melhor acompanhamento de suas atividades potencializando as chances de alcançar seus objetivos!</p>
-                    <a href="http://startbootstrap.com/template-overviews/grayscale/" class="btn btn-default btn-lg">Acesse agora</a>
+                    <a href="app/View/cadastro.html" class="btn btn-default btn-lg">Acesse agora</a>
                 </div>
             </div>
         </div>
